@@ -118,6 +118,7 @@ define('_AM_WGTEAMS_FORM_EDIT', "Ändern");
 define('_AM_WGTEAMS_FORM_DELETE', "Löschen");
 define('_AM_WGTEAMS_SUBMITTER', "Ersteller");
 define('_AM_WGTEAMS_DATE_CREATE', "erstellt am");
+define('_AM_WGTEAMS_MAX_FILESIZE', "Maximale Dateigröße in KB:");
 // ---------------- Admin Others ----------------
 define('_AM_WGTEAMS_MAINTAINEDBY', " is maintained by ");
 // ---------------- End ----------------
